Brand new registry in testing, might replace the jank we have currently

--- a/src/main/resources/assets/tconstruct/lang/en_us.json
+++ b/src/main/resources/assets/tconstruct/lang/en_us.json
@@ -194,8 +194,7 @@
 	"block.tconstruct.seared_creeperface_stone": "Seared Creeperface",
 	"block.tconstruct.seared_furnace_controller": "Seared Furnace Controller",
 	"block.tconstruct.seared_glass": "Seared Glass",
-	"block.tconstruct.seared_glass.glass": "Seared Glass",
-	"block.tconstruct.seared_glass.glass.tooltip": "Part of the Smeltery. Safe for decoration.\nCannot store liquids.",
+	"block.tconstruct.seared_glass.tooltip": "Part of the Smeltery. Safe for decoration.\nCannot store liquids.",
 	"block.tconstruct.seared_paver_stone": "Seared Paver",
 	"block.tconstruct.seared_slab.brick": "Seared Bricks Slab",
 	"block.tconstruct.seared_slab.brick_cracked": "Cracked Seared Bricks Slab",
