AAAAAAAHHHHH Fluids coming soon:tm:

--- a/src/main/resources/assets/tconstruct/lang/en_us.json
+++ b/src/main/resources/assets/tconstruct/lang/en_us.json
@@ -257,18 +257,10 @@
 	"block.tconstruct.smeltery_controller.tooltip": "Brain of the Smeltery",
 	"block.tconstruct.smeltery_io.drain": "Seared Drain",
 	"block.tconstruct.smeltery_io.drain.tooltip": "Fluid in- and output for the Smeltery and Tinker Tank",
-	"block.tconstruct.soil.consecrated": "Consecrated Soil",
-	"block.tconstruct.soil.consecrated.tooltip": "Hurts undead",
-	"block.tconstruct.soil.graveyard": "Graveyard Soil",
-	"block.tconstruct.soil.graveyard.tooltip": "Heals undead",
-	"block.tconstruct.soil.grout": "Grout",
-	"block.tconstruct.soil.grout.tooltip": "I am Grout!",
-	"block.tconstruct.soil.slimy_mud_blue": "Blue Slimy Mud",
-	"block.tconstruct.soil.slimy_mud_blue.tooltip": "block.tconstruct.soil.slimy_mud_green.tooltip",
-	"block.tconstruct.soil.slimy_mud_green": "Green Slimy Mud",
-	"block.tconstruct.soil.slimy_mud_green.tooltip": "Slows, but lets you jump even higher",
-	"block.tconstruct.soil.slimy_mud_magma": "Slimy Magma Mud",
-	"block.tconstruct.soil.slimy_mud_magma.tooltip": "block.tconstruct.soil.slimy_mud_green.tooltip",
+	"block.tconstruct.graveyard.tooltip": "Heals undead",
+	"block.tconstruct.slimy_mud_blue.tooltip": "block.tconstruct.slimy_mud_green.tooltip",
+	"block.tconstruct.slimy_mud_green.tooltip": "Slows, but lets you jump even higher",
+	"block.tconstruct.slimy_mud_magma.tooltip": "block.tconstruct.slimy_mud_green.tooltip",
 	"block.tconstruct.square_brownstone_brick_slab": "Square Brownstone Brick Slab",
 	"block.tconstruct.square_brownstone_brick_stairs": "Square Brownstone Brick Stairs",
 	"block.tconstruct.square_brownstone_bricks": "Square Brownstone Bricks",
