Support for alloys (Manyullyn)

--- a/src/main/resources/assets/tconstruct/lang/en_us.json
+++ b/src/main/resources/assets/tconstruct/lang/en_us.json
@@ -527,9 +527,7 @@
 	"item.tconstruct.ingots.cobalt": "Cobalt Ingot",
 	"item.tconstruct.ingots.knightslime": "Knightslime Ingot",
 	"item.tconstruct.ingots.knightslime.tooltip": "Slimy yet metallic but also stone? Fascinating!",
-	"item.tconstruct.ingots.manyullyn": "Manyullyn Ingot",
-	"item.tconstruct.ingots.pigiron": "Pigiron Ingot",
-	"item.tconstruct.ingots.pigiron.tooltip": "Oink!",
+	"item.tconstruct.pigiron.tooltip": "Oink!",
 	"item.tconstruct.jewel_item_frame": "Fancy Item Frame",
 	"item.tconstruct.kama": "Kama",
 	"item.tconstruct.kama.desc": "The Kama is a precision reaping tool, mowing down plants and shearing animals.\nRight Click: Harvest and replant crops",
